#44 updated objective functionality
